# advent-of-code

./: .gitignore  Cargo.toml  README.md
2023/: Cargo.toml
2023/src/: lib.rs  main.rs  trie.rs  utils.rs  vecmap.rs
2023/src/day_1/: mod.rs
2023/src/day_10/: labirynth.rs
2023/src/day_11/: mod.rs
2023/src/day_13/: mod.rs
2023/src/day_2/: mod.rs
2023/src/day_3/: mod.rs  task_1.rs  task_2.rs  utils.rs
2023/src/day_4/: mod.rs
2023/src/day_5/: mod.rs
2023/src/day_6/: mod.rs
2023/src/day_7/: mod.rs  task_2.rs
2023/src/day_8/: mod.rs
2024/: Cargo.toml
2024/src/: lib.rs  main.rs  plane.rs  utils.rs
2024/src/day_10/: mod.rs
2024/src/day_11/: mod.rs
2024/src/day_12/: mod.rs
2024/src/day_13/: mod.rs
2024/src/day_14/: mod.rs
2024/src/day_15/: mod.rs
2024/src/day_16/: mod.rs
2024/src/day_17/: mod.rs
2024/src/day_2/: mod.rs
2024/src/day_20/: mod.rs
2024/src/day_21/: mod.rs
2024/src/day_22/: mod.rs
2024/src/day_25/: mod.rs
2024/src/day_3/: mod.rs
2024/src/day_4/: mod.rs
2024/src/day_7/: mod.rs
2024/src/day_8/: mod.rs
2024/src/day_9/: mod.rs
2024/src/day_templ/: mod.rs
2025/: Cargo.toml
2025/src/: lib.rs  main.rs
src/: lib.rs  main.rs  plane.rs  task_fns.rs  trie.rs  utils.rs  vecmap.rs
src/y2023/: mod.rs
src/y2023/day_1/: mod.rs
src/y2023/day_10/: labirynth.rs  mod.rs
src/y2023/day_11/: mod.rs
src/y2023/day_12/: mod.rs
src/y2023/day_13/: mod.rs
src/y2023/day_2/: mod.rs
src/y2023/day_3/: mod.rs  task_1.rs
src/y2023/day_4/: mod.rs
src/y2023/day_5/: mod.rs
src/y2024/: mod.rs
src/y2025/: mod.rs
(+46 files in other folders)
