[package]
name = "aoc"
version = "0.1.0"
edition = "2021"

[dependencies]
cached = "0.54.0"
clap = { version = "4.5.21", features = ["derive"] }
itertools = "0.13.0"
pathfinding = "4.12.0"
regex = "1.11.1"
rustc-hash = "2.1.0"
union-find = "0.4.3"
lazy_static = "1.4.0"
once_cell = "1.18.0"
chrono = "0.4.42"
